fix for bug #386739:  File > Import causes Bookmarks and History to disappear on restart

unlock the profile after ScopedXPCOMStartup object has gone out of scope.

r=bsmedberg, rstrong